[package]
name = "arccstr"
version = "1.2.3"

description = "Thread-safe, reference-counted null-terminated immutable strings."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/arccstr"
homepage = "https://github.com/jonhoo/arccstr"
repository = "https://github.com/jonhoo/arccstr.git"

keywords = ["strings", "reference-counting", "cstr", "immutability"]
categories = ["concurrency", "data-structures", "memory-management"]

license = "MIT/Apache-2.0"

[features]
default = ["serde"]

[badges]
travis-ci = { repository = "jonhoo/arccstr" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
