[package]
name = "arccstr"
version = "1.3.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Thread-safe, reference-counted null-terminated immutable strings."
repository = "https://github.com/jonhoo/arccstr.git"

keywords = ["strings", "reference-counting", "cstr", "immutability"]
categories = ["concurrency", "data-structures", "memory-management"]

[features]
default = ["serde"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "arccstr", build = "22" }
codecov = { repository = "jonhoo/arccstr", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
